--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 ## Ignore rmvrc file
-#.rvmrc
+.rvmrc
 
 # Ignore bundler config
 /.bundle
